# computercraftedu-installer

./: Makefile  README.md  generate_deb.sh  generate_entry.sh  generate_glad.sh  generate_msi.sh  generate_package.sh  generate_pkg.sh  generate_pkgbuild.sh  generate_resources.sh  glad_generate.sh  lua_fmt.sh  lua_index.sh  meson.build  meson_options.txt  osx_host.ini  package.wxs  package_all.sh  package_arch.sh  package_debian.sh  package_osx.sh  prototype-entry.desktop  resources.rc  win32_host.ini  win64_host.ini
glad/glx/include/glad/: glad_glx.h
glad/glx/src/: glad_glx.c
glad/include/glad/: glad.h  glad_glx.h
glad/src/: glad.c  glad_glx.c
pkg_out/: computercraftedu-2c27f50-1-x86_64.pkg.tar.zst  computercraftedu-2c27f50-x86-installer.msi  computercraftedu-2c27f50-x86_64-installer.msi  computercraftedu-7040432-1-x86_64.pkg.tar.zst  computercraftedu-7040432-x86-installer.msi  computercraftedu-7040432-x86_64-installer.msi  computercraftedu_2c27f50_all.deb  computercraftedu_7040432_all.deb
src/: init.lua  main.c
