option('lua_version', type: 'string', value: 'auto',
       description: 'Lua version to use (implementation relative)')
option('lua_implementation', type: 'string', value: 'luajit',
       description: 'Lua implementation to use')
option('standalone', type: 'boolean', value: false,
       description: 'Configure build to run without installation')
option('confprefix', type: 'string', value: 'auto',
       description: 'Prefix for system configuration files. `auto` uses the contents of `--prefix`, '
      + 'unless it is set to `/usr`, in which case this variable is set to `/`. Used for `--sysconfdir`.')
